--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --no-cache",
+    "lint:fix": "next lint --fix",
+    "type-check": "node check-types.js",
+    "build:strict": "npm run type-check && npm run lint && next build",
+    "prebuild": "echo 'Skipping strict checks'"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -29,13 +33,16 @@
     "recharts": "^2.15.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "^20.17.30",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.14",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.1.0",
-    "postcss": "^8.4.24",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3"
   }
 }
